# nano-infer

./: .gitignore  CMakeLists.txt  Makefile  README.md  check_arch.py  check_awq_format.c  check_dtype.py  check_dtypes.c  check_embed.c  check_json.c  check_lm_head.py  check_names.c  check_shapes.c  check_vocab.c  gen_token_lookup.py  iidea.md  parse_vocab_new.c  test_awq_dequant.c  test_decode.c  token_lookup.json  verify_awq.c  verify_awq.py  verify_dequant.c  verify_model.py  vocab_map.json
include/: awq.h  common.h  config.h  fp8.h  kv_cache.h  model.h  offload.h  safetensors.h  simd.h  tokenizer.h
src/: awq.c  config.c  fp8.c  kv_cache.c  main.c  model.c  offload.c  safetensors.c  simd.c  tokenizer.c
